--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,7 +6,7 @@ $f-extra-bold: 800;
 
 // colours
 $dark: #242424;
-$primary: #fff;
+$primary: #ffffff;
 $box-shadow: rgb(0 0 0 / 2%) 0px 1px 3px 0px, rgb(27 31 35 / 15%) 0px 0px 0px 1px;
 
 // global
